[bumpversion]
commit = True
tag = True
current_version = 10.0.2
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+))?
serialize = 
	{major}.{minor}.{patch}

[metadata]
description-file = README.md

[bumpversion:file:setup.py]

[bumpversion:file:aws_lambda/__init__.py]

[coverage:run]
source = aws_lambda

[flake8]
exclude = docs

